Fix quick link alignment when narrower than other widgets - closes #216

--- a/src/plugins/widgets/links/Links.sass
+++ b/src/plugins/widgets/links/Links.sass
@@ -1,11 +1,9 @@
 .Links
-    display: grid
     column-gap: 1em
+    display: inline-grid
 
     a
         display: block
         margin: 0.25em
         white-space: nowrap
 
-        i
-            margin-right: 0.25em
